--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -1,18 +1,22 @@
 .title {
-    text-align: center;
-    display: flex;
-    font-size: xx-large;
-  }
-  
+  text-align: center;
+  display: flex;
+  font-size: xx-large;
+}
+
+.logincontainer{
+  text-align: center;
+}
+
 .loginform{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    font-size: 40px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 40px;
 }
 
 .loginform input[type="text"],
 .loginform input[type="password"],
 .loginform input[type="submit"] {
-  font-size: 24px; 
+font-size: 24px; 
 }
