--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -17,6 +17,14 @@ body {
     text-decoration: none;
     font-size: 17px;
   }
+
+  .leadingHome{
+    font-size: 15px;
+  }
+
+  .deadlineHome{
+    font-size: 15px;
+  }
   
   .topnav a:hover {
     background-color: #ddd;
