--- a/client/src/css/Auction.css
+++ b/client/src/css/Auction.css
@@ -99,3 +99,9 @@ body {
     font-size: 16px;
     margin-top: 30px;
 }
+
+#winner-row{
+    display: flex;
+    align-content: center;
+    margin-top: 80px;
+}
