--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -2,6 +2,7 @@
   text-align: center;
   display: flex;
   font-size: xx-large;
+  margin-top: 20px;
 }
 
 .logincontainer{
@@ -19,4 +20,46 @@
 .loginform input[type="password"],
 .loginform input[type="submit"] {
 font-size: 24px; 
+}
+
+#username_label{
+  margin-top:30px;
+  font-size: 24px;
+  text-align: left;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+#password_label{
+  font-size: 24px;
+  text-align: left;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+#submit_login{
+  margin-top: 30px;
+  margin-right: 30px;
+  margin-left: 30px;
+  border-radius: 10px;
+  margin-bottom:10px;
+}
+
+#container_login{
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px; /* Arrotonda i bordi del container */
+  border: 1px solid #ccc; /* Aggiungi un bordo per evidenziare il container */
+  background-color: #FFFFFF;
+}
+
+#p_login{
+  font-size: 20px;
+  margin-right:20px;
+  margin-left:20px;
+}
+
+#link_to_register{
+  font-size: 20px;
+  margin-bottom: 20px;
 }
